<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09" />

        <!--        <com.google.android.material.appbar.AppBarLayout-->
        <!--            android:id="@+id/appBarLayout"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:theme="@style/AppTheme.AppBarOverlay"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent">-->

        <!--                <androidx.appcompat.widget.Toolbar-->
        <!--                    android:id="@+id/toolbar"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="?attr/actionBarSize"-->
        <!--                    android:background="?attr/colorPrimary"-->
        <!--                    app:popupTheme="@style/AppTheme.PopupOverlay" />-->

        <!--        </com.google.android.material.appbar.AppBarLayout>-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.44" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <Spinner
            android:id="@+id/spinnerKB"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/KB"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Spinner
            android:id="@+id/spinnerKN"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/KN00"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <Button
            android:id="@+id/btnxDx"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btnxDx"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnxxD"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <Button
            android:id="@+id/btnxxD"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btnxxD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/uploadIn"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/btnxUx"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btnxUx"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/btnxxU"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/btnxUpdReg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btnUpdReg"
            app:layout_constraintBottom_toTopOf="@+id/spinnerKB"
            app:layout_constraintEnd_toStartOf="@+id/btnxUx"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <Button
            android:id="@+id/btnxxU"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btnxxU"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            android:fadeScrollbars="false"
            android:scrollbarSize="15dp"
            android:scrollbarThumbVertical="@color/cardview_dark_background"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@android:color/black"
                            tools:listitem="@layout/recycler_view_item" />
                </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/lblCurrentBake"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/lblCurrentBake"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/lblCurrentPech"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/lblCurrentPech"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <TextView
            android:id="@+id/lblHistory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/lblHistory"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblCurrentReglament"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/lblCurrentReglament"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <ImageView
            android:id="@+id/curBunker1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/currentBunker1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageView
            android:id="@+id/curBunker2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/currentBunker2"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageView
            android:id="@+id/curBunker3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/currentBunker3"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star" />

        <TextView
            android:id="@+id/CurrentBake"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/CurrentBake"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/currentReglament"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/CurrentReglament"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/lblCurrentReglament" />

        <TextView
            android:id="@+id/currentPech"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/CurrentPech"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/trapezoid"
            android:rotation="180"
            android:scaleType="fitXY"
            android:scaleX="1.15"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:srcCompat="@drawable/trapezoid" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/trapezoid"
            android:rotation="180"
            android:scaleType="fitXY"
            android:scaleX="1.15"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:srcCompat="@drawable/trapezoid" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/trapezoid"
            android:rotation="180"
            android:scaleType="fitXY"
            android:scaleX="1.15"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:srcCompat="@drawable/trapezoid" />


</androidx.constraintlayout.widget.ConstraintLayout>